# FrizzlePlayerMaster

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/frizzle/frizzleplayermaster/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  FrizzleFFmpeg.cpp  FrizzleFFmpeg.h  JavaCallHepler.cpp  JavaCallHepler.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/frizzle/frizzleplayermaster/: MainActivity.java
app/src/main/java/com/frizzle/frizzleplayermaster/player/: FrizzlePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/frizzle/frizzleplayermaster/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
